--- a/estilos/style.css
+++ b/estilos/style.css
@@ -5,13 +5,26 @@
     box-sizing: border-box;
 }
 :root {
-    --fundo-principal
-    --texto
-    --texto-inverso
-    --destaque
-    --destaque-inverso
-    --fundo-card
+    --fundo-principal: #f5f5f5;
+    --texto: #222222;
+    --texto-inverso: #ffffff;
+    --destaque: #0077ff;
+    --destaque-inverso: #66bbff;
+    --fundo-card: #ffffff;
 }
 body {
-    
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    line-height: 1.5em;
+    background-color: var(--fundo-principal);
+    color: var(--texto);
+}
+header {
+    background-color: var(--destaque);
+    color: var(--texto);
+    padding: 10px;
+}
+#menu ul {
+    list-style: none;
+    display: flex;
+    gap: 10px;
 }
