--- a/estilos/style.css
+++ b/estilos/style.css
@@ -22,9 +22,24 @@ header {
     background-color: var(--destaque);
     color: var(--texto);
     padding: 10px;
+    display: flex;
+    justify-content: flex-end;
+    align-content: center;
 }
 #menu ul {
     list-style: none;
     display: flex;
     gap: 10px;
+}
+#menu a {
+    text-decoration: none;
+    color: var(--texto-inverso);
+    font-weight: 600;
+    padding: 12px 15px;
+    border-radius: 5px;
+    transition: all 0.5s 0.2s;
+}
+#menu a:hover {
+    background-color: var(--destaque-inverso);
+    color: var(--destaque);
 }
