--- a/estilos/style.css
+++ b/estilos/style.css
@@ -43,3 +43,20 @@ header {
     background-color: var(--destaque-inverso);
     color: var(--destaque);
 }
+main {
+
+}
+#ficha {
+    background-color: var(--fundo-card);
+    padding: 20px;
+    border-radius: 8px;
+}
+#ficha img.foto {
+    width: 200px;
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+    object-fit: cover;
+    overflow: hidden;
+    border: 5px solid var(--fundo-card);
+    outline: 5px solid var(--destaque);
+}
