--- a/estilos/style.css
+++ b/estilos/style.css
@@ -37,7 +37,7 @@ header {
     font-weight: 600;
     padding: 12px 15px;
     border-radius: 5px;
-    transition: all 0.5s 0.2s;
+    transition: all 0.5s linear 0.2s;
 }
 #menu a:hover {
     background-color: var(--destaque-inverso);
@@ -45,7 +45,9 @@ header {
 }
 main {
     display: grid;
-    grid-template-columns: auto 90% auto;
+    grid-template-columns: 1fr 90% 1fr;
+    gap: 10px;
+    margin-top: 20px;
 }
 #ficha {
     background-color: var(--fundo-card);
@@ -78,4 +80,12 @@ main {
     font-size: 1.6em;
     gap: 10px;
     margin-top: 15px;
+}
+#social a {
+    color: var(--destaque);
+    transition: all 0.3s linear 0.2s;
+}
+#social a:hover {
+    color: var(--destaque-inverso);
+    transform: scale(1.1);
 }
