--- a/estilos/style.css
+++ b/estilos/style.css
@@ -89,3 +89,16 @@ main {
     color: var(--destaque-inverso);
     transform: scale(1.1);
 }
+#detalhes {
+    grid-column: 2 / -2;
+}
+article {
+    background-color: var(--fundo-card);
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+}
+article h2 {
+    color: var(--destaque);
+    margin-bottom: 10px;
+}
