--- a/estilos/style.css
+++ b/estilos/style.css
@@ -102,3 +102,32 @@ article h2 {
     color: var(--destaque);
     margin-bottom: 10px;
 }
+#skill-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 30px;
+}
+.info {
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+}
+.nome {
+    font-weight: bold;
+    color: var(--texto);
+}
+.porcent {
+    font-weight: bold;
+    color: var(--destaque);
+}
+.barra {
+    width: 100%;
+    height: 8px;
+    border-radius: 4px;
+    background-color: var(--fundo-principal);
+}
+.progresso {
+    height: 100%;
+    background-color: var(--destaque-inverso);
+    border-radius: 4px;
+}
