--- a/estilos/style.css
+++ b/estilos/style.css
@@ -131,3 +131,8 @@ article h2 {
     background-color: var(--destaque-inverso);
     border-radius: 4px;
 }
+@media screen and (min-width: 769px) {
+    #skill-container {
+        grid-template-columns: 1fr 1fr;
+    }
+}
